[package]
name = "track"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0"
imgui = { version = "0.11", features = ["tables-api"] }
imgui-winit-support = "0.11"
imgui-glium-renderer = "0.11"
winit = { version = "0.27.5", features = ["x11"] }
winit_input_helper = "0.13"
glium = "0.32.1"
byteorder = "1"
mint = "0.5.9"
cpal = "0.15.2"
log = "0.4.17"

[profile.release]
lto = "thin"

